// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePanelBlocksField renders the field 1`] = `
<Memo(NodePanelField)
  name="Blocks"
>
  <WithStyles(ForwardRef(Typography))
    display="inline"
    variant="overline"
  >
    18
     / 
    ~12345
  </WithStyles(ForwardRef(Typography))>
</Memo(NodePanelField)>
`;

exports[`NodePanelBlocksField renders the field when no latestBlock 1`] = `
<Memo(NodePanelField)
  name="Blocks"
>
  <WithStyles(ForwardRef(Typography))
    display="inline"
    variant="overline"
  >
    0
     / 
    ?
  </WithStyles(ForwardRef(Typography))>
</Memo(NodePanelField)>
`;

exports[`NodePanelBlocksField will receive right props 1`] = `
Object {
  "currentBlock": "18",
  "latestBlock": "12345",
}
`;
